fix vertical align in cover text

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -85,8 +85,12 @@
 }
 .post-card-image-text {
     position: absolute;
-    top: 50%;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    top: 0;
     width: 100%;
+    height: 100%;
     text-align: center;
     text-shadow: 1px 0 8px rgba(0, 0, 0, 0.7);
     color: white;
